==> tdurrer5/delta_x_tm123/Stepper.cpp <==
#include <cmath>
#include <stdint.h>
#include <stdbool.h>
#include "inc/hw_ints.h"
#include "inc/hw_memmap.h"
#include "inc/hw_types.h"
#include "driverlib/debug.h"
#include "driverlib/fpu.h"
#include "driverlib/gpio.h"
#include "driverlib/interrupt.h"
#include "driverlib/pin_map.h"
#include "driverlib/rom.h"
#include "driverlib/sysctl.h"
#include "driverlib/timer.h"
#include "Stepper.h"
#define TurnOnTimer5    TimerEnable(TIMER0_BASE, TIMER_A);  //(TIMSK5 |= (1 << OCIE5A))     // enable to create a stepper pulse
#define TurnOffTimer5   TimerDisable(TIMER0_BASE, TIMER_A);  //(TIMSK5 &= ~(1 << OCIE5A))
#define TurnOnTimer2    TimerEnable(TIMER1_BASE, TIMER_A);  //(TIMSK2 |= (1 << OCIE2A))     // time for pulse duration fix 50 us
#define TurnOffTimer2   TimerDisable(TIMER1_BASE, TIMER_A); //(TIMSK2 &= ~(1 << OCIE2A))

void StepperClass::init(std::vector<Segment>* SegmentQueue)
{
	this->SegmentQueue = SegmentQueue;

	//noInterrupts();
    IntMasterDisable();

/*
	// Reset register relate to Timer 5
	// Reset register relate
	TCCR5A = TCCR5B = TCNT5 = 0;
	// Set CTC mode to Timer 5
	TCCR5B |= (1 << WGM52);
	// Set prescaler 1 to Timer 5
	TCCR5B |= (1 << CS50);
	//Normal port operation, OCxA disconnected
	TCCR5A &= ~((1 << COM5A1) | (1 << COM5A0) | (1 << COM5B1) | (1 << COM5B0));
	

	// Setup for Timer 2
	// Reset register relate
	TCCR2A = TCCR2B = TCNT2 = 0;
	// Set CTC mode
	TCCR2A |= (1 << WGM21);
	// Set prescaler 1
	TCCR2B |= (1 << CS20);
	//Normal port operation, OC2A disconnected
	TCCR2A &= ~((1 << COM2A1) | (1 << COM2A0) | (1 << COM2B1) | (1 << COM2B0));
	COMPARE_VALUE_TIMER2 = 80; //5us
	                       4000 50x5us = 250us
*/

    //
    // Enable the peripherals used by this example.
    //
    ROM_SysCtlPeripheralEnable(SYSCTL_PERIPH_TIMER0);  //pulse interval dynamic
    ROM_SysCtlPeripheralEnable(SYSCTL_PERIPH_TIMER1);  //pulse lenth static

    //
    // Enable processor interrupts.
    //
    IntMasterEnable();

    //
    // Configure the two 32-bit periodic timers.
    //
//    TimerConfigure(TIMER0_BASE,  TIMER_CFG_ONE_SHOT);
    TimerConfigure(TIMER0_BASE,  TIMER_CFG_PERIODIC);
//    TimerConfigure(TIMER1_BASE, TIMER_CFG_ONE_SHOT);
    TimerConfigure(TIMER1_BASE, TIMER_CFG_PERIODIC);

    TimerLoadSet(TIMER0_BASE, TIMER_A, ROM_SysCtlClockGet() /  1000); // initially 1ms
    TimerLoadSet(TIMER1_BASE, TIMER_A, ROM_SysCtlClockGet() / 200000); // 1ms/200  = 5us

    TimerIntRegister(TIMER0_BASE, INT_TIMER0A, Timer0IntHandler);
    TimerIntRegister(TIMER1_BASE, INT_TIMER1A, Timer1IntHandler);

    TimerIntEnable(TIMER0_BASE, TIMER_TIMA_TIMEOUT);
    TimerIntEnable(TIMER1_BASE, TIMER_TIMA_TIMEOUT);

	//interrupts();
    IntMasterEnable();

	CreateMotor();

	IsRunningHome = false;
	IsStoppedMoving = true;

	stepper_max_movtime = 10000; // hope its ~10 sec?

    //
    // Setup the interrupts for the timer timeouts.
    //
    IntEnable(INT_TIMER0A); // this one
    IntEnable(INT_TIMER1A); // fixed: in ISR clear Timer0 instead Timer1
}

void StepperClass::SetIntCycle(float intCycle) // dynamic timer delay for pulse gen and traj gen update
{
	int compare_t0 = intCycle * (1 * 5) *16;  // 62.5us * 5 * 16

    TimerLoadSet(TIMER0_BASE, TIMER_A, compare_t0); //

}
