==> deltaxrobot/Delta-X-Firmware/Delta_Firmware/Stepper.cpp <==
#include "Stepper.h"

void StepperClass::init(vector<Segment>* SegmentQueue)
{
	this->SegmentQueue = SegmentQueue;

	noInterrupts();
	
	// Reset register relate to Timer 5
	// Reset register relate
	TCCR5A = TCCR5B = TCNT5 = 0;
	// Set CTC mode to Timer 5
	TCCR5B |= (1 << WGM52);
	// Set prescaler 1 to Timer 5
	TCCR5B |= (1 << CS50);
	//Normal port operation, OCxA disconnected
	TCCR5A &= ~((1 << COM5A1) | (1 << COM5A0) | (1 << COM5B1) | (1 << COM5B0));
	

	// Setup for Timer 2
	// Reset register relate
	TCCR2A = TCCR2B = TCNT2 = 0;
	// Set CTC mode
	TCCR2A |= (1 << WGM21);
	// Set prescaler 1
	TCCR2B |= (1 << CS20);
	//Normal port operation, OC2A disconnected
	TCCR2A &= ~((1 << COM2A1) | (1 << COM2A0) | (1 << COM2B1) | (1 << COM2B0));
	COMPARE_VALUE_TIMER2 = 80; //5us

	interrupts();

	CreateMotor();

	IsRunningHome = false;
	IsStoppedMoving = true;
}

void StepperClass::SetIntCycle(float intCycle)
{
	int prescaler;

	if (intCycle > 4000)
	{
		TCCR5B |= (1 << CS51);
		TCCR5B &= ~(1 << CS50);
		prescaler = 8;
	}
	else
	{
		TCCR5B &= ~(1 << CS51);
		TCCR5B |= (1 << CS50);
		prescaler = 1;
	}

	COMPARE_VALUE_TIMER5 = roundf(intCycle * F_CPU / (1000000.0 * prescaler)) - 1;
}
